# fooyin-kode54-plugins

./: .gitmodules  CMakeLists.txt  README.md
midiplugin/: BMPlayer.cpp  CMakeLists.txt  MIDIPlayer.cpp  MIDIPlayer.h  SpessaPlayer.cpp  SpessaPlayer.h  midiinput.cpp  midiinput.h  midiinput.json  midiinputdefs.h  midiinputplugin.cpp  midiinputplugin.h  midiinputsettings.cpp  midiinputsettings.h
midiplugin/sflist/: CMakeLists.txt
vgmstream/: CMakeLists.txt  vgmstreaminput.cpp  vgmstreaminput.h  vgmstreaminput.json  vgmstreaminputdefs.h  vgmstreaminputplugin.cpp  vgmstreaminputplugin.h  vgmstreaminputsettings.cpp  vgmstreaminputsettings.h
widgetplugin/: CMakeLists.txt  metadata.json  widget.cpp  widget.h  widget.ui  widgetplugin.cpp  widgetplugin.h
xsf/: CMakeLists.txt  xsfinput.cpp  xsfinput.h  xsfinput.json  xsfinputdefs.h  xsfinputplugin.cpp  xsfinputplugin.h  xsfinputsettings.cpp  xsfinputsettings.h
